[package]
name = "pochi"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"
serenity = {version = "0.10.7", features = ["framework", "standard_framework"]}
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
hyper = "0.12.3"
axum = "0.4.5"
tracing = "0.1.31"
tracing-subscriber = "0.3.9"